--- a/common-util/pom.xml
+++ b/common-util/pom.xml
@@ -11,9 +11,9 @@
 
     <packaging>jar</packaging>
 
-    <artifactId>common-rest</artifactId>
+    <artifactId>common-util</artifactId>
     <name>${project.artifactId}</name>
-    <description>REST API</description>
+    <description>util</description>
     <url>https://github.com/pupilcc/common</url>
 
     <licenses>
@@ -44,6 +44,21 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.10</version>
+        </dependency>
+    </dependencies>
 
     <distributionManagement>
         <snapshotRepository>
