--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.pupilcc.common</groupId>
     <artifactId>common-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
 
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
@@ -39,6 +39,7 @@
         <module>common-rest</module>
         <module>common-util</module>
         <module>common-database</module>
+        <module>common-base</module>
     </modules>
 
     <properties>
